<resources>
    <string name="app_name" translatable="false">Chetna NGO</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="nav_open" translatable="false">open</string>
    <string name="nav_close" translatable="false">close</string>
    <string name="our_story">CHETNA was registered as a public charitable trust in Delhi, India, to start its vital work on child empowerment on 8th March 2002. When literally translated from Hindi, CHETNA means “creating awareness” and stands for “Childhood Enhancement through Training and Action”. We strongly believe in the active participation of children, and thus started working with them from 2002 to address key child rights issues such as survival, protection, development and participation. CHETNA has grown to become a pioneering organisation in raising child protection issues with a team of experienced social workers and professionals. Some members of our team were themselves street connected children, who, with the help of CHETNA have worked their way to a better life and are now resolute towards transforming other similar lives. Since the beginning, the CHETNA team and children have worked together to tailor a range of programs and activities to fit their needs. At CHETNA we live our values, so participation underpins our whole organisation in the form of Badhte Kadam- a unique federation of street connected children. Badhte Kadam run their own fully operational newsletter called Balaknama; the first of its kind in the world. On 12th April 2013, Badhte Kadam made its way into the Limca Book of Records by putting approximately 9,000 hand prints on a white cloth in less than twelve-and-a-half minutes at Bal Bhavan in Delhi, with an aim of increasing visibility of street-connected children under the theme “we too exist”. On 12th April 2016, Balaknama was awarded by the Limca Book of Records as the first Hindi newsletter brought out by street children.</string>
    <string name="our_a_1">The participation of children is fundamental to the achievement of our objectives at CHETNA. Through working directly with the children, together we design the programme of activities that can best meet their needs.</string>
    <string name="our_a_2">We cannot change the situation that Street and Working Children find themselves in without changingthe attitudes of those around them.We work to ensure their immediate stakeholders and society in general better understand their struggle and what can be done to ensure their rights. We work to sensitize a number of individuals and groups aimed at building an environment capable of nurturing and cultivating a child’s potential for growth and development.</string>
    <string name="our_a_3">We use advocacy as a tool to make a positive impact on policy making and bring about the desired refinement in the policies that are being implemented, drafted or discussed. Therefore it is vital in helping us reach our overall vision.</string>
    <string name="who_we_are">Street connected children are among the most marginalized and vulnerable groups in the society. They are exposed to many threats and dangers including child labour, child trafficking, sexual abuse, extreme poverty, physical and mental abuse, and homelessness. A Census of India carried out in 2011 found that the total number of children under the age of 18 involved in child labour is 23.8 million. 10.1 million of these children were aged up to 14. Perhaps the scariest statistics is that children up to 18 years old make up 5 per cent of the country’s total workforce.</string>
    <string name="who_we_are2">According to the United Nations Convention on the Rights of Children, all children are born with fundamental rights: Right to Survival – to life, health, nutrition, name, nationality Right to Development – to education, care, leisure, recreation, cultural activities Right to Protection – from exploitation, abuse, neglect Right to Participation – to expression, information, thought, religion Unfortunately millions of children around the world are still being denied access to their basic rights. This situation is a key reason why NGOs like CHETNA continue to be necessary to provide essential services, like Contact Points, in response to the direct needs of street connected children, and to give them opportunities to advocate and improve the implementation of the vital laws that ensure their rights.</string>
    <string name="why_we_exist">Why We Exist</string>
    <string name="why_we_exist1">We are a grass-roots Indian NGO working for the empowerment of street connected children in Delhi and neighboring states. We believe that children are not on the street by choice, but because they are left with no other alternative. Street connected children are just as much a part of this country as any other individual. That is why at CHETNA, we are dedicated to ensuring they receive their rights and are treated equally by our society. We have 17 years of experience working alongside these children attempting to break the vicious cycle of poverty and get them access to their basic human rights of protection, education, healthcare, participation and opportunities for a livelihood. The role and participation of children is central to the work of CHETNA and has shaped us into a truly child-centred organisation. It is our firm belief that children are the protagonists and staff the catalysts for change.</string>
    <string name="our_mission">Our mission is to provide childhood empowerment through training and action, with a special focus on street connected children and especially girls, to ensure their rights.</string>
    <string name="vision">Our vision is to achieve a child-caring society that respects their rights.</string>
    <string name="t1_text">An engineering and management professional with vast experience in the international and domestic industry sector, Mr. Prakash currently works as Managing Director- Mosaic Houseware. Holding a vast experience in management, Mr. Prakash has significantly shaped the management practices at CHETNA.</string>
    <string name="tv_name">Mr. Ved Prakash: Chairperson</string>
    <string name="t2_text">Dr. Goswami carries a unique blend of academic, policy and implementation experience in the CSR space. With over 25 years advising and influencing business on the practical and strategic choices of CSR, Dr. Goswami is also a member of Government of India instituted Disclosure Framework committee to design an e-Form under MCA 21 by the Ministry of Corporate Affairs, to take forward the agenda of “Inclusive and Sustainable Growth” in India. She has previously led CSR initiatives of Good and Green at Godrej Industries Limited, Indus Tower and Microsoft. She was recently awarded with a “Sustainability Superwomen” award instituted by CSR Works of Singapore. She headed the CHETNA board as its chairperson for a decade.</string>
    <string name="t2_name">Dr. Mrs. Vikas Goswami: Treasurer</string>
    <string name="t3_name">Ms. Ruchira Gujral: Member</string>
    <string name="t3_text">Ms. Gujral has over 14 years of experience of working on the issue of CSR and the role of the private sector in human development, with multiple stakeholders and in varied roles. She has worked with industry bodies and think tanks, corporate sector, International NGOs and donor agencies in various roles. Currently she is in Corporate Engagement and acts as a CSR Specialist at UNICEF India.</string>
    <string name="t4_name">Mr. Jaideep Singh Bhisht: Founder Trustee</string>
    <string name="t4_text">Mr. Bhisht works as a Development Officer at LIC, Dehradun. Carrying a strong background in financial management, Mr. Bhisht has built CHETNA’s capacity to maintain strong financial systems in place.</string>
    <string name="t5_name">Mr. Sanjay Gupta: Managing Trustee and Director</string>
    <string name="t5_text">A devoted social activist with 24 years of experience in the field of developmental work and the founder of CHETNA, Mr. Gupta takes care of the day to day activities of the organization. He is an engineering graduate from Pantnagar University and represents many government/non-government committees responsible for ensuring children’s rights. Mr. Gupta is currently the vice-chair of National Action Coordination Group (NACG)-part of SAIVAC (South Asia Initiative to End Violence Against Children).</string>
    <string name="t6_name">Dr Bharti Sharma: Ex-Board Member</string>
    <string name="t6_text">An eminent scholar, policy maker and social activist, Dr. Sharma has also served as chairperson of the Child Welfare Committee, Nirmal Chaya, Delhi. Her dedication on the CHETNA board has been immensely appreciated for over a decade.</string>
    <string name="text_profile">Profile</string>
    <string name="change_language">Change Language</string>
    <string name="about_us">About Us</string>
    <string name="our_approach">Our Approach</string>
    <string name="logout">Logout</string>
    <string name="text_our_story">Our Story</string>
    <string name="text_our_mission">Our Mission</string>
    <string name="text_our_vision">Our Vision</string>
    <string name="enter_case_name">Enter Case Name</string>
    <string name="description">Description</string>
    <string name="add_photos">Add Photos</string>
    <string name="add">Add</string>
    <string name="level">Level</string>
    <string name="level_information">Level Information</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="event_date">Event Date</string>
    <string name="event_time">Event Time</string>
    <string name="name_of_child">Name Of Child</string>
    <string name="location">Location</string>
    <string name="remark">Remark</string>
    <string name="add_post">Add Post</string>
    <string name="single">Single</string>
    <string name="csv">CSV</string>
    <string name="add_student_details">Add Student Details.</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_age">Enter Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="others">Others</string>
    <string name="enter_description_optional">Enter Description (Optional)</string>
    <string name="select_csv_file_from_storage">Select CSV file From Storage!</string>
    <string name="subject_title">Subject (Title)</string>
    <string name="describe_your_suggestion">Describe your suggestion</string>
    <string name="submit">Submit</string>
    <string name="view_my_leave_applications">View My Leave Applications</string>
    <string name="leave_application">Leave Application</string>
    <string name="enter_reason">Enter Reason</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="location_of_leave">Location Of leave</string>
    <string name="add_area_image">Add Area Image</string>
    <string name="submit_attendance">Submit Attendance</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="work_area">Work area</string>
    <string name="about_you">About You</string>
    <string name="nothing_to_show_here">Nothing to Show Here!</string>
    <string name="no_student_found">No Student Found!</string>
    <string name="add_student">Add Student</string>
    <string name="aadhar_card_no">Aadhar Card No.</string>
    <string name="name_on_bank">Name On Bank</string>
    <string name="blood_group_optional">Blood Group (Optional)</string>
    <string name="bank_name">Bank Name</string>
    <string name="add_working_area">Add Working Area</string>
    <string name="write_text_here">Write Text Here!</string>
    <string name="save">Save</string>
    <string name="apply_for_leave">Apply For Leave</string>
</resources>