<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AddStudentActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:id="@+id/radioSingleStudent"
                android:fontFamily="@font/andika"
                android:text="@string/single"
                android:textColor="@color/black" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:id="@+id/radioStudentCsv"
                android:fontFamily="@font/andika"
                android:text="@string/csv"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:id="@+id/bAddChild"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/edit_bg"
                android:backgroundTint="@color/green"
                android:fontFamily="@font/andika"
                android:text="@string/add"
                android:textColor="@color/white"
                android:textStyle="bold" />


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray" />

        <LinearLayout
            android:id="@+id/addSingleStudentLyt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/andika"
                android:text="@string/add_student_details"
                android:textSize="16sp" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/edChildName"
                android:background="@color/light_gray"
                android:fontFamily="@font/andika"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:paddingStart="10dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/edChildAge"
                android:layout_marginTop="10dp"
                android:background="@color/light_gray"
                android:fontFamily="@font/andika"
                android:hint="@string/enter_age"
                android:inputType="number"
                android:paddingStart="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/gender" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:id="@+id/maleChild"
                    android:checked="true"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/femaleChild"
                    android:layout_marginStart="10dp"
                    android:text="@string/female" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/otherChild"
                    android:layout_marginStart="10dp"
                    android:text="@string/others" />

            </RadioGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_bg"
                android:backgroundTint="@color/light_gray"
                android:fontFamily="@font/andika"
                android:id="@+id/remarkChild"
                android:gravity="start|top"
                android:hint="@string/enter_description_optional"
                android:padding="10dp"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:gravity="center"
            android:id="@+id/selectCsvLyt"
            android:background="@drawable/edit_bg"
            android:backgroundTint="@color/light_gray"
            android:orientation="vertical"
            android:padding="10dp">


            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/ic_add_csv"
                app:tint="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/select_csv_file_from_storage" />


        </LinearLayout>

    </LinearLayout>


</ScrollView>