<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".activities.AboutUsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:src="@drawable/asa" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/andika"
            android:gravity="center"
            android:text="@string/why_we_exist"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/andika"
            android:gravity="center"
            android:text="@string/why_we_exist1"
            android:textSize="14sp"
            android:textStyle="bold" />



        <TextView
            android:layout_width="match_parent"
            android:text="@string/text_our_mission"
            android:gravity="center"
            android:textSize="25sp"
            android:fontFamily="@font/andika"
            android:textStyle="bold"
            android:textColor="@color/purple"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/andika"
            android:gravity="center"
            android:text="@string/our_mission"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/andika"
            android:gravity="center"
            android:text="@string/text_our_vision"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/andika"
            android:gravity="center"
            android:text="@string/vision"
            android:textSize="14sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/andika"
            android:gravity="center"
            android:text="@string/why_we_exist"
            android:textColor="@color/purple"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/andika"
            android:gravity="center"
            android:text="@string/who_we_are"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/andika"
            android:gravity="center"
            android:text="@string/who_we_are2"
            android:textSize="14sp"
            android:textStyle="bold" />


    </LinearLayout>



</ScrollView>